# freertos-addons

./: .gitmodules  CMakeLists.txt  FindFreertos.cmake
Linux/Demo/Linux_g++_binary_semaphore/: Linux_g++_binary_semaphore  main.cpp
Linux/portable/GCC/Linux/: FreeRTOSmacros.hpp  port.c
c++/Source/include/: critical.hpp
